k8s/platform/cert-manager/tls-validation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-validation-whoami
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tls-validation-whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tls-validation-whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
