k8s/platform/cert-manager/tls-validation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-validation-whoami
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: tls-validation-whoami
  ports:
    - name: http
      port: 80
      targetPort: http
